added new heap and stack skopes.  Chose poor variable names that may need to be changed later to help with readability and expandability

--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
 
   <script src="heap_factory.js"></script>
   <script src="heap_controller.js"></script>
+  <script src="heap_controller2.js"></script>
+  <script src="stack_controller.js"></script>
 </body>
 </html>
